chapter_3/locking_example/main.tf
variable "amazon_ami" {
  description = "AMI"
}

resource "aws_instance" "example" {
  ami                    = "${var.amazon_ami}"
  instance_type          = "t2.micro"
  vpc_security_group_ids = ["${aws_security_group.instance.id}"]

  key_name = "vagrant_nomad_key"

  user_data = <<-EOF
        #!/bin/bash
        echo "Hello World" > index.html
        nohup busybox httpd -f -p 8080 &
        EOF

  tags {
    Name = "terraform-example"
  }
}

resource "aws_security_group" "instance" {
  name = "terraform-example-instance"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

terraform {
  backend "s3" {
    bucket  = "berchev-terraform-book-state"
    region  = "us-east-1"
    key     = "example_locking/terraform.tfstate"
    encrypt = true
  }
}
